--- a/style.scss
+++ b/style.scss
@@ -1,17 +1,19 @@
-html,
-body {
+@import "variable";
+
+html, body {
   margin: 0;
+  font-family: $mainFont;
 }
 
 .title {
   text-align: center;
   font-size: 5rem;
+  font-family: "Josefin Sans", sans-serif;
 }
 
 .main {
   text-align: center;
   display: flex;
-  border: 1px goldenrod;
   height: 100vh;
 }
 
