--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,12 @@
 @import "variable";
+/*
+* {
+  border: 1px solid red;
+}
+*/
 
-html, body {
+html,
+body {
   margin: 0;
   font-family: $mainFont;
 }
@@ -8,13 +14,17 @@ html, body {
 .title {
   text-align: center;
   font-size: 5rem;
-  font-family: "Josefin Sans", sans-serif;
+  color: $dark-primary-color;
+  margin-top: 3.5rem;
+  padding: 1rem;
+  background-color: $light-primary-color;
 }
 
 .main {
   text-align: center;
   display: flex;
-  height: 100vh;
+  align-items: flex-end;
+  justify-content: center;
 }
 
 .container-main {
@@ -22,9 +32,17 @@ html, body {
   padding: 2rem;
 }
 
+.container-title {
+  font-size: 1.5rem;
+}
+
 img {
   width: 100%;
   margin: 1rem 0;
+}
+
+.container-text {
+  font-size: auto;
 }
 
 a {
@@ -33,4 +51,11 @@ a {
   border: 0.1rem solid black;
   padding: 10px;
   margin: 1rem;
+  background-color: $accent-color;
+  color: $text-primary-color;
+}
+
+a:hover {
+  background-color: $default-primary-color;
+  transition: 1s;
 }
