--- a/style.scss
+++ b/style.scss
@@ -1,8 +1,9 @@
 @import "variable";
-
+/*
 * {
   border: 1px solid red;
 }
+*/
 
 html,
 body {
@@ -12,13 +13,24 @@ body {
   background-color: $secondary-text-color;
 }
 
+.container {
+  height: 90vh;
+}
+
 .title {
   text-align: center;
-  font-size: 5rem;
-  color: $dark-primary-color;
+  font-size: 4rem;
+  color: $light-primary-color;
   margin-top: 3.5rem;
   padding: 1rem;
   background-color: $light-primary-color;
+  text-transform: uppercase;
+  font-style: italic;
+  background-image: linear-gradient(
+    to right,
+    $light-primary-color,
+    $dark-primary-color
+  );
 }
 
 .main {
@@ -29,13 +41,14 @@ body {
 }
 
 .container-main {
-  width: 33.333%;
+  width: 33.333vw;
   padding: 2rem;
 }
 
 .container-title {
   font-size: 1.5rem;
   color: $light-primary-color;
+  text-shadow: #333 1px 1.5px;
 }
 
 img {
@@ -45,7 +58,7 @@ img {
 
 .container-text {
   font-size: 1.05rem;
-  line-height: 1.2rem;
+  line-height: 1.3rem;
 }
 
 a {
