--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .li {
@@ -42,18 +42,12 @@ body {
   text-align: center;
   font-size: 4rem;
   color: #b2ebf2;
-  margin-top: 2rem;
+  margin-top: 1.5rem;
   padding: 1rem;
   background-color: #b2ebf2;
   text-transform: uppercase;
   font-style: italic;
-  background-image: -webkit-gradient(
-    linear,
-    left top,
-    right top,
-    from(#b2ebf2),
-    to(#0097a7)
-  );
+  background-image: -webkit-gradient(linear, left top, right top, from(#b2ebf2), to(#0097a7));
   background-image: linear-gradient(to right, #b2ebf2, #0097a7);
 }
 
@@ -63,11 +57,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: end;
-  -ms-flex-align: end;
-  align-items: flex-end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .container-main {
@@ -97,7 +91,6 @@ a {
 
 .container a {
   display: inline-block;
-  text-decoration: none;
   border: 0.1rem solid black;
   padding: 10px;
   margin: 1rem;
